--- a/css/main.css
+++ b/css/main.css
@@ -159,11 +159,8 @@ button:active {
 .nav__link {
   text-transform: uppercase;
   font-weight: 900;
-}
-
-.nav__link:hover {
-  color: #22241b;
-  transform: scale(1);
+  text-decoration: none;
+  border: 1px solid transparent;
 }
 
 .nav__email {
@@ -336,6 +333,12 @@ button:active {
   margin-right: 26px;
 }
 
+.programs__link {
+  color: #000;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
 .programs__number:after {
   content: "";
   display: block;
@@ -356,6 +359,51 @@ button:active {
   margin-top: 52px;
 }
 
+.hover-image-scale {
+  max-width: 300px;
+  width: 100%;
+  height: 300px;
+}
+
+.portfolio__work {
+  position: relative;
+}
+
+.portfolio__overlay {
+  font-family: "Natasha";
+  font-size: 15px;
+  background: rgba(0, 0, 0, 0.45);
+  color: #fff;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease;
+}
+
+.portfolio__work:hover .portfolio__overlay {
+  opacity: 1;
+}
+
+.portfolio__watch {
+  font-family: "Museo Sans";
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.portfolio__watch:after {
+  content: "";
+  display: block;
+  border-bottom: 1px solid #fff;
+  opacity: 50%;
+}
+
 /* footer */
 
 .footer {
@@ -368,4 +416,99 @@ button:active {
   font-size: 11px;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.66);
+}
+
+/* media quaries */
+@media screen and (max-width: 1200px) {
+}
+/* 768-992px */
+@media screen and (max-width: 992px) {
+  .container {
+    width: 700px;
+  }
+
+  .author__text,
+  .achieve {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
+  .nav {
+    flex-direction: column;
+  }
+  .nav__list {
+    margin-top: 30px;
+
+    flex-direction: column;
+  }
+  .nav__item {
+    width: 90%;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .nav__email {
+    font-size: 20px;
+  }
+
+  h1 {
+    font-size: 35px;
+  }
+  .second__title {
+    font-size: 23px;
+  }
+
+  h3 {
+    text-align: center;
+  }
+  .author {
+    flex-direction: column;
+  }
+
+  .author__text {
+    width: 90%;
+  }
+  .achieve__list {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .achieve__list {
+    row-gap: 25px;
+  }
+
+  .achieve h4 {
+    margin-top: 15px;
+  }
+
+  .call__main {
+    flex-direction: column;
+  }
+
+  .write {
+    margin-top: 15px;
+  }
+
+  .programs__list {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .programs__list {
+    row-gap: 15px;
+  }
+
+  .portfolio {
+    flex-direction: column;
+  }
+
+  .portfolio__overlay {
+    width: 100%;
+  }
 }
