one more time media

--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ button:active {
 /* first section */
 
 .about {
-  padding: 73px 0 55px;
+  padding: 73px 0 27px;
 }
 
 .author {
@@ -260,7 +260,7 @@ button:active {
 .achieve__text {
   text-align: center;
   font-family: "Museo Sans";
-  font-weight: 100;
+  font-weight: 400;
   font-size: 12px;
   text-transform: uppercase;
   margin-top: 28px;
@@ -282,11 +282,15 @@ button:active {
 }
 
 .call__link {
+  font-family: "Museo Sans";
+  font-weight: 400;
   color: #204d15;
   font-size: 14px;
 }
 
 .write {
+  font-family: "Museo Sans";
+  font-weight: 400;
   margin-left: 56px;
   align-items: center;
 }
@@ -307,7 +311,7 @@ button:active {
 /* second section */
 
 .skills {
-  padding: 8px 0 92px;
+  padding: 27px 0 46px;
 }
 
 .programs__item {
@@ -319,6 +323,7 @@ button:active {
 .programs__list {
   margin-top: 54px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .programs__number {
@@ -352,7 +357,7 @@ button:active {
 /* third section */
 
 .works {
-  padding: 1px 0 160px;
+  padding: 1px 0 80px;
 }
 
 .portfolio {
@@ -360,6 +365,7 @@ button:active {
 }
 
 .hover-image-scale {
+  object-fit: cover;
   max-width: 300px;
   width: 100%;
   height: 300px;
@@ -385,6 +391,7 @@ button:active {
   justify-content: center;
   align-items: center;
   transition: all 0.5s ease;
+  height: 300px;
 }
 
 .portfolio__work:hover .portfolio__overlay {
@@ -407,15 +414,20 @@ button:active {
 /* footer */
 
 .footer {
-  padding: 2px 0 98px;
+  padding: 80px 0 98px;
 }
 
 .main {
   text-align: left;
   text-transform: uppercase;
   font-size: 11px;
-  font-weight: 400;
+
   color: rgba(0, 0, 0, 0.66);
+}
+
+.main p {
+  font-family: "Museo Sans";
+  font-weight: 400;
 }
 
 /* media quaries */
@@ -424,91 +436,105 @@ button:active {
 /* 768-992px */
 @media screen and (max-width: 992px) {
   .container {
-    width: 700px;
+    max-width: 710px;
   }
-
-  .author__text,
   .achieve {
-    width: 45%;
+    margin-left: 40px;
   }
-}
-
-@media screen and (max-width: 576px) {
-  .container {
-    width: 90%;
-  }
-  .nav {
+  .programs__list {
     flex-direction: column;
-  }
-  .nav__list {
-    margin-top: 30px;
-
-    flex-direction: column;
-  }
-  .nav__item {
-    width: 90%;
-    font-size: 20px;
-    margin-bottom: 20px;
+    align-items: center;
+    row-gap: 15px;
   }
 
-  .nav__email {
-    font-size: 20px;
+  .portfolio__work {
+    /* margin-right: 21px; */
   }
-
-  h1 {
-    font-size: 35px;
-  }
-  .second__title {
-    font-size: 23px;
-  }
-
-  h3 {
-    text-align: center;
+  ..portfolio__worklast-child {
+    margin: 0;
   }
   .author {
     flex-direction: column;
   }
-
-  .author__text {
-    width: 90%;
+  .achieve {
+    text-align: left;
+    margin-top: 30px;
+    margin-left: 0px;
   }
   .achieve__list {
+    margin: 0;
+    margin-top: 30px;
+  }
+}
+/* 576-768px*/
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 580px;
+  }
+  .nav {
     flex-direction: column;
+    margin-bottom: 40px;
+  }
+
+  .nav__list {
+    margin: 40px auto;
+  }
+
+  h1 {
+    font-size: 45px;
+  }
+
+  .arrow__down {
+    margin-top: 40px;
+  }
+  .portfolio {
+    gap: 21px;
+  }
+}
+/* 320-576 */
+@media screen and (max-width: 576px) {
+  .container {
+    max-width: 320px;
+    text-align: center;
+    align-items: center;
+  }
+
+  .nav__list {
+    flex-direction: column;
+    gap: 21px;
     align-items: center;
     justify-content: center;
   }
 
+  h1 {
+    font-size: 32px;
+  }
+  .second__title {
+    font-size: 26px;
+  }
+
+  .author {
+    max-width: 80%;
+  }
+
   .achieve__list {
-    row-gap: 25px;
+    flex-direction: column;
+    gap: 21px;
   }
-
-  .achieve h4 {
-    margin-top: 15px;
-  }
-
   .call__main {
+    margin-top: 40px;
     flex-direction: column;
   }
 
   .write {
-    margin-top: 15px;
-  }
-
-  .programs__list {
+    margin-top: 40px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .programs__list {
-    row-gap: 15px;
   }
 
   .portfolio {
+    text-align: center;
+    align-items: center;
+    max-width: 95%;
     flex-direction: column;
-  }
-
-  .portfolio__overlay {
-    width: 100%;
   }
 }
